@@ -4,6 +4,7 @@
 - Fix missing use of a l10n string for email sender
 - Fix for delete draft
 - Fix path on save invoice
+- Fix for incorrect attach of pdf
 - Use of path var on delete file
 - Prepare for a future support for other backend for invoice data
 
